--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,6 +59,6 @@ img {
 }
 .cont {
   height: 90vh;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   text-align: center;
 }
