--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,16 +5,12 @@
   /* background-color: hsl(221, 51%, 16%); */
 }
 .navbar {
-  -webkit-backdrop-filter: blur(8px);
-  backdrop-filter: blur(8px);
-  position: fixed;
-  top: 0;
+  background-color: rgba(255, 255, 255, 0.9);
 }
 .link-a {
   font-size: 20px;
 }
 .link-a:hover {
-  /* padding-bottom: 0.4em; */
   border-bottom: 0.1em solid #0d6efd;
 }
 .btn {
