--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,68 +1,20 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
+  --primary-color: #007bff;
+  --background-color: #f8f9fa;
+  --text-color: #000;
 }
-.navbar {
-  background-color: rgba(255, 255, 255, 0.9);
+
+[data-theme="dark"] {
+  --primary-color: #bada55;
+  --background-color: hsl(236, 43%, 12%);
+  --text-color: #fff;
 }
-.link-a {
-  font-size: 20px;
+
+body {
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
-.link-a:hover {
-  border-bottom: 0.1em solid #0d6efd;
-}
-.btn {
-  width: 130px;
-  height: 40px;
-  background: linear-gradient(to top, #00154c, #12376e, #23487f);
-  color: #fff;
-  border-radius: 50px;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  position: relative;
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-}
-.btn span {
-  font-size: 12px;
-  letter-spacing: 1px;
-  transition: top 0.5s;
-}
-.btn-text-one {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-}
-.btn-text-two {
-  position: absolute;
-  width: 100%;
-  top: 150%;
-  left: 0;
-  transform: translateY(-50%);
-}
-.btn:hover .btn-text-one {
-  top: -100%;
-}
-.btn:hover .btn-text-two {
-  top: 50%;
-}
-img {
-  border-radius: 10px;
-}
-.cont {
-  height: 85vh;
-  text-align: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../imgs/eden-constantino-OXmym9cuaEY-unsplash.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.home-section-1 {
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin: 30px 0px;
+
+.container {
+  margin-top: 20px;
 }
