--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,60 @@
   --text-color: #000;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* .cont {
+  height: 85vh;
+  text-align: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../imgs/eden-constantino-OXmym9cuaEY-unsplash.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
+
+.btn {
+  width: 130px;
+  height: 40px;
+  background: linear-gradient(to top, #00154c, #12376e, #23487f);
+  color: #fff;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+}
+.btn span {
+  font-size: 12px;
+  letter-spacing: 1px;
+  transition: top 0.5s;
+}
+.btn-text-one {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.btn-text-two {
+  position: absolute;
+  width: 100%;
+  top: 150%;
+  left: 0;
+  transform: translateY(-50%);
+}
+.btn:hover .btn-text-one {
+  top: -100%;
+}
+.btn:hover .btn-text-two {
+  top: 50%;
+}
+
 [data-theme="dark"] {
   --primary-color: #bada55;
   --background-color: hsl(236, 43%, 12%);
@@ -13,6 +67,9 @@
     &.show {
       color: white;
     }
+  }
+  .nav-link:hover{
+    color: #0d6efd;
   }
 }
 
@@ -29,5 +86,21 @@ body {
   &.active,
   &.show {
     color: black;
+    font-size: 18px;
   }
+}
+
+.nav-link:hover {
+  border-bottom: 0.1em solid #0d6efd;
+  color: #0d6efd;
+}
+
+.form-check-input {
+  cursor: pointer;
+  background-color: #fffffa;
+}
+
+.body-img {
+  margin-top: 90px;
+  border-radius: 15px;
 }
