--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,8 +64,14 @@
       color: white;
     }
   }
+  .ham-burger {
+    color: #c4c5cb;
+  }
   .nav-link:hover {
     color: #0d6efd;
+  }
+  .nav-link {
+    color: white;
   }
 }
 
@@ -91,9 +97,9 @@ body {
   color: #0d6efd;
 }
 
-.form-check-input {
-  cursor: pointer;
-  background-color: #fffffa;
+.nav-link {
+  color: black;
+  font-size: 15px;
 }
 
 .body-img {
@@ -105,7 +111,7 @@ body {
   margin-top: 120px;
 }
 
-.small-cards{
+.small-cards {
   margin-top: 150px;
 }
 
@@ -114,6 +120,7 @@ body {
 }
 
 .list-img {
+  margin-top: 15px;
   width: 100px;
   border-radius: 10px;
 }
