--- a/src/css/pmp-style.css
+++ b/src/css/pmp-style.css
@@ -19,6 +19,14 @@
   font-size: 15px;
 }
 
+.nav-link {
+  &.active,
+  &.show {
+    color: black;
+    font-size: 18px;
+  }
+}
+
 .btn {
   width: 130px;
   height: 40px;
@@ -77,6 +85,10 @@
   .nav-link {
     color: white;
   }
+  .card {
+    color: white;
+    background-color:#11132c;
+  }
 }
 
 body {
@@ -84,10 +96,98 @@ body {
   color: var(--text-color);
 }
 
-.nav-link {
-  &.active,
-  &.show {
-    color: black;
-    font-size: 18px;
-  }
+.main-page {
+  margin-top: 120px;
+  margin-bottom: 50px;
+}
+
+.main-img {
+  border-radius: 15px;
+}
+
+.section1 {
+  margin-top: 110px;
+}
+
+.card-title {
+  font-size: 1.5em;
+  line-height: normal;
+  font-weight: 700;
+  margin-bottom: 0.5em;
+}
+
+.small-desc {
+  font-size: 1em;
+  font-weight: 400;
+  line-height: 1.5em;
+}
+
+.small-desc {
+  font-size: 1em;
+}
+
+.go-corner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 2em;
+  height: 2em;
+  overflow: hidden;
+  top: 0;
+  right: 0;
+  color: #fff;
+  background-color: #a8aaac;
+  border-radius: 0 4px 0 32px;
+}
+
+.go-arrow {
+  margin-top: -4px;
+  margin-right: -4px;
+  color: white;
+  font-family: courier, sans;
+}
+
+.card {
+  display: block;
+  position: relative;
+  max-width: 500px;
+  max-height: 320px;
+  border-radius: 10px;
+  padding: 2em 1.2em;
+  margin: 12px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+  background: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  top: -16px;
+  right: -16px;
+  background: linear-gradient(135deg, #364a60, #384c6c);
+  height: 32px;
+  width: 40px;
+  border-radius: 32px;
+  transform: scale(1);
+  transform-origin: 50% 50%;
+  transition: transform 0.35s ease-out;
+}
+
+.card:hover:before {
+  transform: scale(28);
+}
+
+.card:hover .small-desc {
+  transition: all 0.5s ease-out;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.card:hover .card-title {
+  transition: all 0.5s ease-out;
+  color: #ffffff;
 }
