--- a/src/css/pmp-style.css
+++ b/src/css/pmp-style.css
@@ -27,6 +27,57 @@
   }
 }
 
+/* hamburger */
+.icon-menu {
+  --gap: 5px;
+  --height-bar: 2.5px;
+  --pos-y-bar-one: 0;
+  --pos-y-bar-three: 0;
+  --scale-bar: 1;
+  --rotate-bar-one: 0;
+  --rotate-bar-three: 0;
+  width: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  cursor: pointer;
+  position: relative;
+}
+.bar {
+  position: relative;
+  height: var(--height-bar);
+  width: 100%;
+  border-radius: 0.5rem;
+  background-color: black;
+}
+.bar--1 {
+  top: var(--pos-y-bar-one);
+  transform: rotate(var(--rotate-bar-one));
+  transition: top 200ms 100ms, transform 100ms;
+}
+.bar--2 {
+  transform: scaleX(var(--scale-bar));
+  transition: transform 150ms 100ms;
+}
+.bar--3 {
+  bottom: var(--pos-y-bar-three);
+  transform: rotate(var(--rotate-bar-three));
+  transition: bottom 200ms 100ms, transform 100ms;
+}
+.check-icon:checked + .icon-menu > .bar--1 {
+  transition: top 200ms, transform 200ms 100ms;
+}
+.check-icon:checked + .icon-menu > .bar--3 {
+  transition: bottom 200ms, transform 200ms 100ms;
+}
+.check-icon:checked + .icon-menu {
+  --pos-y-bar-one: calc(var(--gap) + var(--height-bar));
+  --pos-y-bar-three: calc(var(--gap) + var(--height-bar));
+  --scale-bar: 0;
+  --rotate-bar-one: 45deg;
+  --rotate-bar-three: -45deg;
+}
+
 /* All buttons */
 .btn {
   width: 130px;
@@ -88,11 +139,16 @@
   }
   .cards {
     color: white;
-    background-color:#11132c;
+    background-color: #11132c;
   }
   .card {
     color: white;
-    background-color:#11132c;
+    background-color: #11132c;
+  }
+  .bar--1,
+  .bar--2,
+  .bar--3 {
+    background-color: white;
   }
 }
 
@@ -103,7 +159,7 @@ body {
 
 .main-page {
   margin-top: 20vh;
-  margin-bottom: 20vh; 
+  margin-bottom: 20vh;
 }
 
 .main-img {
@@ -165,7 +221,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 .cards:before {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
   top: -16px;
@@ -197,7 +253,7 @@ body {
 .testimony {
   margin-top: 15vh;
 }
-.user-review{
+.user-review {
   font-size: 17px;
 }
 
@@ -218,7 +274,7 @@ body {
   transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .card:before {
-  content: '';
+  content: "";
   position: absolute;
   z-index: -1;
   top: -16px;
