--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,11 @@
   .nav-link {
     color: white;
   }
+  .bar--1,
+  .bar--2,
+  .bar--3 {
+    background-color: white;
+  }
 }
 
 .nav-link:hover {
